updates to html

--- a/output/index.html
+++ b/output/index.html
@@ -26,8 +26,8 @@
             <h5 class="card-header">Jess Porter<br /><br />Engineer</h5>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">ID: 2</li>
-                <li class="list-group-item">Email Address: ryan.ellingson@yahoo.com</li>
-                <li class="list-group-item">GitHub: RyanEllingson</li>
+                <li class="list-group-item">Email Address: jess.g.porter@gmail.com</li>
+                <li class="list-group-item">GitHub: jgporter24</li>
             </ul>
             </div>
         </div><div class="col-6">
